--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 </head>
 
 <body>
-  <div class="container">
+  
+  <div class="container"> 
+    <p id="ancre"></p>
     <div id="logo">
       <img src="images/oeil.jpg" alt="logo">
     </div>
+   
     <div id="menu">
       <nav>
         <ul>
@@ -25,14 +28,19 @@
     <section>
       <h2>Une image de font dans les caratères des polices.</h2>
       <div id="textDeco">
-<h1>A   B   C   D  </h1>
+        <h1>A B C D </h1>
       </div>
-      <p>Non ergo erunt homines deliciis diffluentes audiendi, si quando de amicitia, quam nec usu nec ratione habent
-        cognitam, disputabunt. Nam quis est, pro deorum fidem atque hominum! qui velit, ut neque diligat quemquam nec
-        ipse ab ullo diligatur, circumfluere omnibus copiis atque in omnium rerum abundantia vivere? Haec enim est
+      <p>Non ergo erunt <mark>homines</mark> deliciis diffluentes audiendi, si quando de amicitia, quam nec usu nec
+        ratione habent
+        cognitam, <strong>&nbsp <mark>(Mots importants---):</mark>&nbsp isputabunt. Nam quis est, pro deorum fidem atque
+          hominum! qui velit, ut neque diligat quemquam nec
+          ipse ab ullo diligatur, circumfluere omnibus copiis atque in omnium rerum abundantia vivere?</strong> Haec
+        enim est
         tyrannorum vita nimirum, in qua nulla fides, nulla caritas, nulla stabilis benevolentiae potest esse fiducia,
         omnia semper suspecta atque sollicita, nullus locus amicitiae.
       </p><br>
+      <img src="images/nature.png" title="paysage">
+      <p><a href="#ancre">Retour au menu!</a></p>
       <p>
         Quam quidem partem accusationis admiratus sum et moleste tuli potissimum esse Atratino datam. Neque enim decebat
         neque aetas illa postulabat neque, id quod animadvertere poteratis, pudor patiebatur optimi adulescentis in tali
@@ -40,16 +48,21 @@
         liberius et fortius et magis more nostro refutaremus istam male dicendi licentiam. Tecum, Atratine, agam lenius,
         quod et pudor tuus moderatur orationi meae et meum erga te parentemque tuum beneficium tueri debeo.
       </p><br>
+      <img src="images/nature.png" title="paysage">
+      <p><a href="#ancre">Retour au menu!</a></p>
       <p>
         Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum
         invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur
         calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.
       </p><br>
+      <img src="images/nature.png" title="paysage">
+      <p><a href="#ancre">Retour au menu!</a></p>
       <p>
         Et quoniam mirari posse quosdam peregrinos existimo haec lecturos forsitan, si contigerit, quamobrem cum oratio
         ad ea monstranda deflexerit quae Romae gererentur, nihil praeter seditiones narratur et tabernas et vilitates
         harum similis alias, summatim causas perstringam nusquam a veritate sponte propria digressurus.
       </p><br>
+      <img src="images/nature.png" title="paysage">
       <p>
         Post haec Gallus Hierapolim profecturus ut expeditioni specie tenus adesset, Antiochensi plebi suppliciter
         obsecranti ut inediae dispelleret metum, quae per multas difficilisque causas adfore iam sperabatur, non ut mos
@@ -57,6 +70,7 @@
         provinciis alimenta transferri conterminis, sed consularem Syriae Theophilum prope adstantem ultima metuenti
         multitudini dedit id adsidue replicando quod invito rectore nullus egere poterit victu.
       </p><br>
+      <img src="images/nature.png" title="paysage">
       <p>
         Cumque pertinacius ut legum gnarus accusatorem flagitaret atque sollemnia, doctus id Caesar libertatemque
         superbiam ratus tamquam obtrectatorem audacem excarnificari praecepit, qui ita evisceratus ut cruciatibus membra
@@ -66,6 +80,7 @@
         quaedam laceratus diutius, avulsam sedibus linguam suam cum cruento sputamine in oculos interrogantis Cyprii
         regis inpegit.
       </p><br>
+      <img src="images/nature.png" title="paysage">
       <p>
         Cyprum itidem insulam procul a continenti discretam et portuosam inter municipia crebra urbes duae faciunt
         claram Salamis et Paphus, altera Iovis delubris altera Veneris templo insignis. tanta autem tamque multiplici
@@ -73,16 +88,19 @@
         fundamento ipso carinae ad supremos usque carbasos aedificet onerariam navem omnibusque armamentis instructam
         mari committat.
       </p><br>
+      <img src="images/nature.png" title="paysage">
       <p>
         Eodem tempore Serenianus ex duce, cuius ignavia populatam in Phoenice Celsen ante rettulimus, pulsatae
         maiestatis imperii reus iure postulatus ac lege, incertum qua potuit suffragatione absolvi, aperte convictus
         familiarem suum cum pileo, quo caput operiebat, incantato vetitis artibus ad templum misisse fatidicum,
         quaeritatum expresse an ei firmum portenderetur imperium, ut cupiebat, et cunctum.
       </p><br>
+      <img src="images/nature.png" title="paysage">
       <p>
         Victus universis caro ferina est lactisque abundans copia qua sustentantur, et herbae multiplices et siquae
         alites capi per aucupium possint, et plerosque mos vidimus frumenti usum et vini penitus ignorantes.
       </p><br>
+      <img src="images/nature.png" title="paysage">
       <p>
         Cumque pertinacius ut legum gnarus accusatorem flagitaret atque sollemnia, doctus id Caesar libertatemque
         superbiam ratus tamquam obtrectatorem audacem excarnificari praecepit, qui ita evisceratus ut cruciatibus membra
@@ -91,13 +109,16 @@
         ducebatur intrepidus temporum iniquitati insultans, imitatus Zenonem illum veterem Stoicum qui ut mentiretur
         quaedam laceratus diutius, avulsam sedibus linguam suam cum cruento sputamine in oculos interrogantis Cyprii
         regis inpegit.
+        <img src="images/nature.png" title="paysage">
       </p><br>
       <p>
-        <strong>Ce texte généré aléatoirement (lorem ipsum) peut être utilisé dans vos maquettes (webdesign, sites internet,
-        livres, affiches...) gratuitement. Ce texte est entièrement libre de droit.
-<br>
-        Si vous aimez la photographie d'art, la peinture et l'esprit zen, jetez un œil sur le site de cet Artiste peintre
-        et photographe à Orsay, en Essonne (France).
+        <strong>Ce texte généré aléatoirement (lorem ipsum) peut être utilisé dans vos maquettes (webdesign, sites
+          internet,
+          livres, affiches...) gratuitement. Ce texte est entièrement libre de droit.
+          <br>
+          Si vous aimez la photographie d'art, la peinture et l'esprit zen, jetez un œil sur le site de cet Artiste
+          peintre
+          et photographe à Orsay, en Essonne (France).
       </p><br>
     </section>
   </div>
