--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,10 @@
     <p id="ancre"></p>
 
     <div id="logo">
-      <img src="images/oeil.jpg" alt="logo">
+      <a href="images/oeil.jpg"target="_blank">
+        <img src="images/oeil.jpg" alt="logo"></a>
     </div>
+
     <div id="formontact">
     <h1>Contactez-moi</h1>
     <form action="https://formspree.io/f/mpwrrwja" method="POST">
