--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  
-  <div class="container">  
+
+  <div class="container">
     <p id="ancre"></p>
     <div id="menu">
       <nav>
@@ -21,13 +21,11 @@
       </nav>
     </div>
 
-    
-
     <div id="logo">
-      <img src="images/oeil.jpg" alt="logo">
+      <a href="images/oeil.jpg" target="_blank">
+        <img src="images/oeil.jpg" alt="logo"></a>
     </div>
-   
-   
+
     <h1 id="title1">Bienvenue sur mon site</h1>
 
     <section>
@@ -41,15 +39,18 @@
       <p>Non ergo erunt <mark>homines</mark> deliciis diffluentes audiendi, si quando de amicitia, quam nec usu nec
         ratione habent
         cognitam, <strong>&nbsp <mark>(Mots importants---):</mark>&nbsp isputabunt. Nam quis est, pro deorum fidem atque
-          hominum! qui velit, ut neque diligat quemquam nec
-          ipse ab ullo diligatur, circumfluere omnibus copiis atque in omnium rerum abundantia vivere?</strong> Haec
+        hominum! qui velit, ut neque diligat quemquam nec
+        ipse ab ullo diligatur, circumfluere omnibus copiis atque in omnium rerum abundantia vivere?</strong> Haec
         enim est
         tyrannorum vita nimirum, in qua nulla fides, nulla caritas, nulla stabilis benevolentiae potest esse fiducia,
         omnia semper suspecta atque sollicita, nullus locus amicitiae.
       </p><br>
-      <a href="images/nature.png"target="_blank">
-      <img class="imgPreview" src="images/nature.png" title="paysage"></a>
+
+      <a href="images/nature.png" target="_blank">
+        <img class="imgPreview" src="images/nature.png" title="paysage"></a>
+
       <p><a href="#ancre">Retour au menu!</a></p>
+
       <p>
         Quam quidem partem accusationis admiratus sum et moleste tuli potissimum esse Atratino datam. Neque enim decebat
         neque aetas illa postulabat neque, id quod animadvertere poteratis, pudor patiebatur optimi adulescentis in tali
@@ -57,24 +58,24 @@
         liberius et fortius et magis more nostro refutaremus istam male dicendi licentiam. Tecum, Atratine, agam lenius,
         quod et pudor tuus moderatur orationi meae et meum erga te parentemque tuum beneficium tueri debeo.
       </p><br>
-     <a href="images/nature.png"target="_blank">
-      <img class="imgPreview" src="images/nature.png" title="paysage"></a>
+      <a href="images/nature.png" target="_blank">
+        <img class="imgPreview" src="images/nature.png" title="paysage"></a>
       <p><a href="#ancre">Retour au menu!</a></p>
       <p>
         Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum
         invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur
         calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.
       </p><br>
-       <a href="images/nature.png"target="_blank">
-      <img class="imgPreview" src="images/nature.png" title="paysage"></a>
+      <a href="images/nature.png" target="_blank">
+        <img class="imgPreview" src="images/nature.png" title="paysage"></a>
       <p><a href="#ancre">Retour au menu!</a></p>
       <p>
         Et quoniam mirari posse quosdam peregrinos existimo haec lecturos forsitan, si contigerit, quamobrem cum oratio
         ad ea monstranda deflexerit quae Romae gererentur, nihil praeter seditiones narratur et tabernas et vilitates
         harum similis alias, summatim causas perstringam nusquam a veritate sponte propria digressurus.
       </p><br>
-       <a href="images/nature.png"target="_blank">
-      <img class="imgPreview" src="images/nature.png" title="paysage"></a>
+      <a href="images/nature.png" target="_blank">
+        <img class="imgPreview" src="images/nature.png" title="paysage"></a>
       <p><a href="#ancre">Retour au menu!</a></p>
       <p>
         Post haec Gallus Hierapolim profecturus ut expeditioni specie tenus adesset, Antiochensi plebi suppliciter
@@ -83,8 +84,8 @@
         provinciis alimenta transferri conterminis, sed consularem Syriae Theophilum prope adstantem ultima metuenti
         multitudini dedit id adsidue replicando quod invito rectore nullus egere poterit victu.
       </p><br>
-      <a href="images/nature.png"target="_blank">
-      <img class="imgPreview" src="images/nature.png" title="paysage"></a>
+      <a href="images/nature.png" target="_blank">
+        <img class="imgPreview" src="images/nature.png" title="paysage"></a>
       <p><a href="#ancre">Retour au menu!</a></p>
       <p>
         Cumque pertinacius ut legum gnarus accusatorem flagitaret atque sollemnia, doctus id Caesar libertatemque
@@ -95,8 +96,8 @@
         quaedam laceratus diutius, avulsam sedibus linguam suam cum cruento sputamine in oculos interrogantis Cyprii
         regis inpegit.
       </p><br>
-     <a href="images/nature.png"target="_blank">
-      <img class="imgPreview" src="images/nature.png" title="paysage"></a>
+      <a href="images/nature.png" target="_blank">
+        <img class="imgPreview" src="images/nature.png" title="paysage"></a>
       <p><a href="#ancre">Retour au menu!</a></p>
       <p>
         Cyprum itidem insulam procul a continenti discretam et portuosam inter municipia crebra urbes duae faciunt
@@ -105,8 +106,8 @@
         fundamento ipso carinae ad supremos usque carbasos aedificet onerariam navem omnibusque armamentis instructam
         mari committat.
       </p><br>
-     <a href="images/nature.png"target="_blank">
-      <img class="imgPreview" src="images/nature.png" title="paysage"></a>
+      <a href="images/nature.png" target="_blank">
+        <img class="imgPreview" src="images/nature.png" title="paysage"></a>
       <p><a href="#ancre">Retour au menu!</a></p>
       <p>
         Eodem tempore Serenianus ex duce, cuius ignavia populatam in Phoenice Celsen ante rettulimus, pulsatae
@@ -114,15 +115,15 @@
         familiarem suum cum pileo, quo caput operiebat, incantato vetitis artibus ad templum misisse fatidicum,
         quaeritatum expresse an ei firmum portenderetur imperium, ut cupiebat, et cunctum.
       </p><br>
-      <a href="images/nature.png"target="_blank">
-      <img class="imgPreview" src="images/nature.png" title="paysage"></a>
+      <a href="images/nature.png" target="_blank">
+        <img class="imgPreview" src="images/nature.png" title="paysage"></a>
       <p><a href="#ancre">Retour au menu!</a></p>
       <p>
         Victus universis caro ferina est lactisque abundans copia qua sustentantur, et herbae multiplices et siquae
         alites capi per aucupium possint, et plerosque mos vidimus frumenti usum et vini penitus ignorantes.
       </p><br>
-      <a href="images/nature.png"target="_blank">
-      <img class="imgPreview" src="images/nature.png" title="paysage"></a>
+      <a href="images/nature.png" target="_blank">
+        <img class="imgPreview" src="images/nature.png" title="paysage"></a>
       <p><a href="#ancre">Retour au menu!</a></p>
       <p>
         Cumque pertinacius ut legum gnarus accusatorem flagitaret atque sollemnia, doctus id Caesar libertatemque
@@ -132,9 +133,9 @@
         ducebatur intrepidus temporum iniquitati insultans, imitatus Zenonem illum veterem Stoicum qui ut mentiretur
         quaedam laceratus diutius, avulsam sedibus linguam suam cum cruento sputamine in oculos interrogantis Cyprii
         regis inpegit.
-        <a href="images/nature.png"target="_blank">
-      <img class="imgPreview" src="images/nature.png" title="paysage"></a>
-        <p><a href="#ancre">Retour au menu!</a></p>
+        <a href="images/nature.png" target="_blank">
+          <img class="imgPreview" src="images/nature.png" title="paysage"></a>
+      <p><a href="#ancre">Retour au menu!</a></p>
       </p><br>
       <p>
         <strong>Ce texte généré aléatoirement (lorem ipsum) peut être utilisé dans vos maquettes (webdesign, sites
@@ -143,7 +144,7 @@
           <br>
           Si vous aimez la photographie d'art, cliquez sur l'image et elle s'ouvrira dans un nouvel onglet.
       </p><br>
-      
+
     </section>
   </div>
 </body>
